update footer copyright string to fetch and set current year

--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@ title: About
     development journey. I dream, articulate, design, implement, and share my
     imagination of the future here.
   </p>
-  <p>Feel free to contact me if you have any comments or feedback.</p>
+  <p>Feel free to <a href="mailto:{{ site.email }}">send me an email</a> if you have any comments or feedback.</p>
   <p>Best regards,</p>
   <p>Te-Yuan Liu</p>
 </div>
